5/9 add Modbus modules

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,8 +13,12 @@
     tools:context="s94285.smarthomecontrol.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <ViewFlipper
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/vf">
+
+        <include layout="@layout/home_page"/>
+        <include layout="@layout/settings"/>
+    </ViewFlipper>
 </RelativeLayout>
