--- a/app/src/main/res/xml/pref_swich.xml
+++ b/app/src/main/res/xml/pref_swich.xml
@@ -1,33 +1,31 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <SwitchPreference
-        android:defaultValue="true"
-        android:key="example_switch"
-        android:summary="@string/pref_description_social_recommendations"
-        android:title="@string/pref_title_social_recommendations" />
 
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
-    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
     <EditTextPreference
-        android:capitalize="words"
-        android:defaultValue="@string/pref_default_display_name"
-        android:inputType="textCapWords"
-        android:key="example_text"
-        android:maxLines="1"
+        android:defaultValue="@string/pref_switch_host_default"
+        android:key="pref_switch_host"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:title="@string/pref_title_display_name" />
-
-    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-         dismiss it. -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-    <ListPreference
-        android:defaultValue="-1"
-        android:entries="@array/pref_example_list_titles"
-        android:entryValues="@array/pref_example_list_values"
-        android:key="example_list"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null"
-        android:title="@string/pref_title_add_friends_to_messages" />
-
+        android:title="@string/pref_switch_host_title" />
+    <EditTextPreference
+        android:defaultValue="@string/pref_switch_port_default"
+        android:key="pref_switch_port"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="@string/pref_switch_port_title"
+        android:numeric="integer"/>
+    <EditTextPreference
+        android:defaultValue="@string/pref_switch_timeout_default"
+        android:key="pref_switch_timeout"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="@string/pref_switch_timeout_title"
+        android:numeric="integer"/>
+    <EditTextPreference
+        android:defaultValue="@string/pref_switch_retries_default"
+        android:key="pref_switch_retries"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="@string/pref_switch_retries_title"
+        android:numeric="integer"/>
 </PreferenceScreen>
